--- a/packages/matriz-generator/app/globals.css
+++ b/packages/matriz-generator/app/globals.css
@@ -2,8 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #__next {
+html,
+body,
+#__next {
   height: 100%;
 }
 
-body { font-size: 18px; }
+body {
+  font-size: 18px;
+}
